Name:                iteratee-bytestring
Version:             0.1.1
Synopsis:            Iteratee IO with ByteStrings
Description:         Iteratee IO with ByteStrings
License:             BSD3
License-file:        LICENSE
Author:              Paulo Tanimoto, John Lato
Maintainer:          ptanimoto@gmail.com
Category:            Data
Build-type:          Simple

Cabal-version:       >=1.8

Flag build-tests
  Description: Build Tests
  Default:     False

Library
  Hs-Source-Dirs:
    src

  Exposed-Modules:
    Data.Iteratee
    Data.Iteratee.ByteString
    Data.Iteratee.Exception
    Data.Iteratee.IO

  Other-Modules:
    Data.Iteratee.Base
    Data.Iteratee.ByteString.Base

  Build-Depends:
    base >= 4 && < 5,
    bytestring >= 0.9 && < 1.0,
    transformers >= 0.2 && < 0.3,
    MonadCatchIO-transformers >= 0.2 && < 0.3

  Extensions:
    GADTs, RankNTypes, BangPatterns, DeriveDataTypeable

  GHC-Options:
    -Wall -O2 -funbox-strict-fields

  Ghc-Prof-Options:
    -auto-all -caf-all

Executable bench-length
  Hs-Source-Dirs: tests
  Main-Is: bench-length.hs

  If flag(build-tests)
    Build-Depends:
      base >= 4 && < 5,
      bytestring >= 0.9 && < 1.0,
      iteratee-bytestring >= 0.1 && < 0.2,
      criterion >= 0.5 && < 0.6
  Else
    Executable: False
    Buildable:  False

  GHC-Options:
    -Wall -O2 -funbox-strict-fields

  Ghc-Prof-Options:
    -auto-all -caf-all
